fixed fugative swim bug getting stuck on bottom of alcatraz

--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     color: rgb(255, 250, 243);
 } 
 .homeHeader {
-    width: 90%;
+    width: 60%;
     height: 10vh;
     margin: 2vh auto;
     display: flex;
@@ -24,7 +24,7 @@ h1 {
 }
 .gameHeader {
     box-sizing: border-box;
-    width: 90%;
+    width: 60%;
     margin: 1vh auto 0;
     display: flex;
     height: 9vh;
@@ -63,16 +63,9 @@ h1 {
     font-size: 1.5rem;
     text-align: end; 
 }
-section {
-    width: 90%;
-    margin: -3vh auto 1vh;
-}
-section > p {
-    margin: 0;
-    font-size: 1.2rem;
-}
+
 main {
-    width: 90%;
+    width: 60%;
     height: 70vh;
     margin: 0 auto;
     display: flex;
